improved the clock management API, added the CMU device class, updated efm32 drivers for clock gating

--- a/arch/efm32/drivers/leuart/leuart.config
+++ b/arch/efm32/drivers/leuart/leuart.config
@@ -11,6 +11,7 @@
   depend CONFIG_DEVICE_IOMUX
   suggest CONFIG_DEVICE_IRQ
   default defined
+  provide CONFIG_DEVICE_START_LOG2INC=2
 %config end
 
 %config CONFIG_DRIVER_EFM32_LEUART_SWFIFO
