--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -307,6 +307,41 @@
   desc Enable clock management support
 %config end
 
+%config CONFIG_DEVICE_CLOCK_GATING
+  parent CONFIG_DEVICE_CLOCK
+  desc Enable dynamic gating of power and clock signals
+%config end
+
+%config CONFIG_DEVICE_CLOCK_SHARING
+  parent CONFIG_DEVICE_CLOCK
+  desc Allow linking multiple clock sink to a single clock source end-point
+%config end
+
+%config CONFIG_DEVICE_CLOCK_VARFREQ
+  parent CONFIG_DEVICE_CLOCK
+  desc Enable support of clock signals with variable frequency
+%config end
+
+%config CONFIG_DEVICE_CLOCK_THROTTLE
+  parent CONFIG_DEVICE_CLOCK
+  depend CONFIG_DEVICE_CLOCK_VARFREQ
+  desc Enable device drivers to request different running frequencies
+%config end
+
+%config CONFIG_DEVICE_CLOCK_MODES
+  parent CONFIG_DEVICE_CLOCK_THROTTLE
+  desc number of device driver clock throttling modes
+  flags value maxval
+  default 4
+%config end
+
+%config CONFIG_DEVICE_CLOCK_MASKB
+  parent CONFIG_DEVICE_CLOCK_THROTTLE
+  desc width of clock resource mode mask
+  flags value maxval
+  default 5
+%config end
+
 %config CONFIG_DEVICE_CLOCK_MAX_ID
   parent CONFIG_DEVICE_CLOCK
   desc Specify the log 2 of the maximum node id
@@ -339,7 +374,7 @@
   parent CONFIG_DEVICE_CLOCK
   desc Specify the number of bits used to store numerator of frequency values.
   flags value maxval
-  default 4
+  default 20
 %config end
 
 %config CONFIG_DEVICE_GPIO
