--- a/arch/efm32/drivers/usart/usart.config
+++ b/arch/efm32/drivers/usart/usart.config
@@ -19,6 +19,7 @@
   require CONFIG_DRIVER_EFM32_USART_RATE
   suggest CONFIG_DEVICE_IRQ
   default defined
+  provide CONFIG_DEVICE_START_LOG2INC=2
 %config end
 
 %config CONFIG_DRIVER_EFM32_USART_CHAR_SWFIFO
