efm32: updated tree structure

--- a/arch/efm32/Makefile
+++ b/arch/efm32/Makefile
@@ -1,13 +1,7 @@
 
 objs = arch_init.o power.o
 
-objs-$(CONFIG_EFM32_STK3200) += dev_stk3200.o
-objs-$(CONFIG_EFM32_STK3600) += dev_stk3x00_678.o
-objs-$(CONFIG_EFM32_STK3700) += dev_stk3x00_678.o
-objs-$(CONFIG_EFM32_STK3800) += dev_stk3x00_678.o
-objs-$(CONFIG_EFM32_G8XX_STK) += dev_g8xxstk.o
-
 meta = ldscript
 
-subdirs = drivers
+subdirs = drivers boards
 
