--- a/arch/pic32/Makefile
+++ b/arch/pic32/Makefile
@@ -1,8 +1,6 @@
 objs += arch_init.o pic32fuses.o power.o
 
-objs-$(CONFIG_PIC32_BOARD_MZEC_STK) += boards/pic32mzecstk.o
-
 meta = ldscript
 
-subdirs = drivers
+subdirs = drivers boards
 
