--- a/arch/stm32/Makefile
+++ b/arch/stm32/Makefile
@@ -1,10 +1,7 @@
 
-objs-$(CONFIG_BOARD_STM32_NUCLEOF401RE) += boards/nucleo_f401re.o
-objs-$(CONFIG_BOARD_STM32_NUCLEOF103RB) += boards/nucleo_f103rb.o
-
 objs += power.o
 
 meta = ldscript
 
-subdirs = drivers
+subdirs = drivers boards
 
