--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -79,34 +79,11 @@
   provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=12
 %config end
 
-%config CONFIG_EFM32_G8XX_STK
-  desc Efm32 support for G8xx gecko starter kit
+%config CONFIG_EFM32_BOARD
+  desc EFM32 board name
   parent CONFIG_ARCH_EFM32
-  depend CONFIG_EFM32_GECKO
-%config end
-
-%config CONFIG_EFM32_STK3200
-  desc Efm32 support for STK3200 zero gecko starter kit
-  parent CONFIG_ARCH_EFM32
-  depend CONFIG_EFM32_ZERO_GECKO
-%config end
-
-%config CONFIG_EFM32_STK3600
-  desc Efm32 support for STK3600 leopard gecko starter kit
-  parent CONFIG_ARCH_EFM32
-  depend CONFIG_EFM32_LEOPARD_GECKO
-%config end
-
-%config CONFIG_EFM32_STK3800
-  desc Efm32 support for STK3800 Wonder gecko starter kit
-  parent CONFIG_ARCH_EFM32
-  depend CONFIG_EFM32_WONDER_GECKO
-%config end
-
-%config CONFIG_EFM32_STK3700
-  desc Efm32 support for STK3700 Giant gecko starter kit
-  parent CONFIG_ARCH_EFM32
-  depend CONFIG_EFM32_GIANT_GECKO
+  default none
+  flags value
 %config end
 
 %config CONFIG_EFM32_STK_BC_EN
