stm32: removed per board config tokens

--- a/arch/stm32/boards/Makefile
+++ b/arch/stm32/boards/Makefile
@@ -1,3 +1,4 @@
 
-objs-$(CONFIG_BOARD_STM32_NUCLEOF401RE) += nucleo_f401re.o
-objs-$(CONFIG_BOARD_STM32_NUCLEOF103RB) += nucleo_f103rb.o
+ifneq ($(CONFIG_STM32_BOARD), none)
+  objs += $(CONFIG_STM32_BOARD).o
+endif
