--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -58,15 +58,10 @@
   flags value
 %config end
 
-%config CONFIG_BOARD_STM32_NUCLEOF401RE
-  desc STM32 Nucleo STM32F401RE board
+%config CONFIG_STM32_BOARD
+  desc STM32 board name
   parent CONFIG_ARCH_STM32
-  provide CONFIG_DRIVER_STM32_USART_PRINTK_CLK_FREQ=42000000
-%config end
-
-%config CONFIG_BOARD_STM32_NUCLEOF103RB
-  desc STM32 Nucleo STM32F103RB board
-  parent CONFIG_ARCH_STM32
-  provide CONFIG_DRIVER_STM32_USART_PRINTK_CLK_FREQ=36000000
+  default none
+  flags value
 %config end
 
