--- a/arch/pic32/pic32.config
+++ b/arch/pic32/pic32.config
@@ -28,10 +28,11 @@
   flags value
 %config end
 
-%config CONFIG_PIC32_BOARD_MZEC_STK
-  desc PIC32MZ embedded connectivity starter kit
+%config CONFIG_PIC32_BOARD
+  desc PIC32 board name
   parent CONFIG_ARCH_PIC32
-  depend CONFIG_DRIVER_PIC32_UART_PRINTK
+  default none
+  flags value
 %config end
 
 %init INIT_PIC32_MEM_ALLOC
