--- a/arch/stm32/drivers/usart/usart.config
+++ b/arch/stm32/drivers/usart/usart.config
@@ -15,6 +15,14 @@
   provide CONFIG_MUTEK_PRINTK_HANDLER
   require CONFIG_DRIVER_STM32_USART_PRINTK_BAUDRATE
   require CONFIG_DRIVER_STM32_USART_PRINTK_CLK_FREQ
+  require CONFIG_DRIVER_STM32_USART_PRINTK_PIN
+  require CONFIG_DRIVER_STM32_USART_PRINTK_AF
+  require CONFIG_MUTEK_PRINTK_ADDR
+  when CONFIG_MUTEK_PRINTK_ADDR=0x40013800 CONFIG_STM32_FAMILY=1
+  when CONFIG_MUTEK_PRINTK_ADDR=0x40004400 CONFIG_STM32_FAMILY=1
+  when CONFIG_MUTEK_PRINTK_ADDR=0x40004800 CONFIG_STM32_FAMILY=1
+  when CONFIG_MUTEK_PRINTK_ADDR=0x40004c00 CONFIG_STM32_FAMILY=1
+  when CONFIG_MUTEK_PRINTK_ADDR=0x40005000 CONFIG_STM32_FAMILY=1
   flags auto
 %config end
 
@@ -23,6 +31,18 @@
   parent CONFIG_DRIVER_STM32_USART_PRINTK
   flags value
   default 115200
+%config end
+
+%config CONFIG_DRIVER_STM32_USART_PRINTK_PIN
+  desc Specify STM32 USART pin used for printk TX
+  parent CONFIG_DRIVER_STM32_USART_PRINTK
+  flags value
+%config end
+
+%config CONFIG_DRIVER_STM32_USART_PRINTK_AF
+  desc Specify STM32 USART pin alternate function used for printk TX
+  parent CONFIG_DRIVER_STM32_USART_PRINTK
+  flags value
 %config end
 
 %config CONFIG_DRIVER_STM32_USART_PRINTK_CLK_FREQ
