added maxval flag to some stack size value tokens

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -22,7 +22,7 @@
 
 %config CONFIG_HEXO_INTERRUPT_STACK_SIZE
   desc Interrupts stack size
-  flags value
+  flags value maxval
   default 4096
   parent CONFIG_HEXO_INTERRUPT_STACK
 %config end
@@ -151,7 +151,7 @@
 
 %config CONFIG_HEXO_CPU_STACK_SIZE
   desc This specifies the size of the processor main context stack.
-  flags value
+  flags value maxval
   parent CONFIG_HEXO
   default 4096
 %config end
