--- a/mutek/load.config
+++ b/mutek/load.config
@@ -210,7 +210,7 @@
 
 %config CONFIG_STARTUP_STACK_SIZE
   desc This specifies the size of the startup stack for the bootstrap processor.
-  flags value
+  flags value maxval
   parent CONFIG_LOAD
   default 4096
 %config end
