efm32: support disabling CONFIG_DEVICE_CLOCK

--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -30,7 +30,16 @@
   parent CONFIG_EFM32_BOOT_BUTTON
   during INIT_BOOTSTRAP
   before INIT_DEVICE
+  before INIT_EFM32_CLOCK_ENABLE
   function efm32_boot_button_wait
+%init end
+
+%init INIT_EFM32_CLOCK_ENABLE
+  parent CONFIG_ARCH_EFM32
+  during INIT_BOOTSTRAP
+  before INIT_DEVICE
+  function efm32_clock_enable
+  condition CONFIG_DEVICE_CLOCK!
 %init end
 
 %config CONFIG_EFM32_RAMSIZE
