--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -157,6 +157,13 @@
   depend CONFIG_MUTEK_THREAD
 %config end
 
+%config CONFIG_MUTEK_SHELL_STACK_SIZE
+  parent CONFIG_MUTEK_SHELL_THREAD
+  desc Specifies the stack size of the shell threads
+  flags value maxval
+  default 3072
+%config end
+
 %config CONFIG_MUTEK_SHELL_PROMPT
   parent CONFIG_MUTEK_SHELL
   desc Define the default shell prompt string
