--- a/cpu/arm32m/arm32m.config
+++ b/cpu/arm32m/arm32m.config
@@ -60,6 +60,19 @@
   provide CONFIG_CPU_HARDWARE_DIVMOD=32
 %config end
 
+%config CONFIG_CPU_ARM32M_CORTEXM7
+  desc Arm Cortex-M7
+  flags harddep
+  parent CONFIG_CPU_ARM32M
+  provide CONFIG_COMPILE_MCPU=cortex-m7
+  provide CONFIG_CPU_NAME=arm_cortex_m7
+  provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_ARM32M_ARCH_VERSION=7
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=32
+%config end
+
 ######################################################################
 # Provided tokens, not definable by user directly
 
@@ -74,9 +87,10 @@
   when CONFIG_CPU_ARM32M_CORTEXM1
   when CONFIG_CPU_ARM32M_CORTEXM3
   when CONFIG_CPU_ARM32M_CORTEXM4
+  when CONFIG_CPU_ARM32M_CORTEXM7
 
   provide CONFIG_CPU_ARCHNAME=arm32m
-  single CONFIG_CPU_ARM32M_CORTEXM0 CONFIG_CPU_ARM32M_CORTEXM0PLUS CONFIG_CPU_ARM32M_CORTEXM1 CONFIG_CPU_ARM32M_CORTEXM3 CONFIG_CPU_ARM32M_CORTEXM4
+  single CONFIG_CPU_ARM32M_CORTEXM0 CONFIG_CPU_ARM32M_CORTEXM0PLUS CONFIG_CPU_ARM32M_CORTEXM1 CONFIG_CPU_ARM32M_CORTEXM3 CONFIG_CPU_ARM32M_CORTEXM4 CONFIG_CPU_ARM32M_CORTEXM7
   provide CONFIG_HEXO_STACK_ALIGN=8
 
   provide CONFIG_CPU_EXCEPTION_ADDR=0x00000000
