hexo: added CONFIG_HEXO_LOCK_DEBUG

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -93,6 +93,14 @@
   desc Enable context stats collection
 %config end
 
+%config CONFIG_HEXO_LOCK_DEBUG
+  parent CONFIG_HEXO
+  desc Enable spin lock deadlock detection
+  depend CONFIG_LIBC_ASSERT
+  when CONFIG_DEBUG
+  when CONFIG_RELEASE!
+%config end
+
 %config CONFIG_HEXO_USERMODE
   parent CONFIG_HEXO
   flags auto
