--- a/scripts/global.config
+++ b/scripts/global.config
@@ -82,6 +82,7 @@
   exclude CONFIG_DEBUG
   exclude CONFIG_COMPILE_DEBUG
   exclude CONFIG_LIBC_ASSERT
+  exclude CONFIG_HEXO_LOCK_DEBUG
 %config end
 
 %config CONFIG_HET_BUILD
