--- a/libc/libc.config
+++ b/libc/libc.config
@@ -92,6 +92,7 @@
   desc Enable support for stdin, stdout and stderr through tty device
   parent CONFIG_LIBC_STREAM
   depend CONFIG_MUTEK_CONSOLE
+  depend CONFIG_MUTEK_CONTEXT_SCHED
 %config end
 
 %config CONFIG_LIBC_FORMATTER
