arch/nrf5x: Add BLE_CCM mode to AES driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -314,6 +314,11 @@
   parent CONFIG_DRIVER_NRF5X_AES
 %config end
 
+%config CONFIG_DRIVER_NRF5X_AES_CCM
+  desc Enable nRF5x Ble-specific CCM
+  parent CONFIG_DRIVER_NRF5X_AES
+%config end
+
 %config CONFIG_DRIVER_NRF5X_RNG
   desc Enable nRF5x Thermal RNG driver
   parent CONFIG_ARCH_NRF5X
