--- a/arch/stm32/drivers/rcc_f4/rcc.config
+++ b/arch/stm32/drivers/rcc_f4/rcc.config
@@ -1,5 +1,5 @@
 
-%config CONFIG_DRIVER_STM32_RCC
+%config CONFIG_DRIVER_STM32_RCC_F4
   desc Driver for Reset and clock controller on STM32.
   parent CONFIG_ARCH_STM32
   depend CONFIG_DEVICE_CLOCK
