--- a/arch/stm32/drivers/usart/Makefile
+++ b/arch/stm32/drivers/usart/Makefile
@@ -2,10 +2,10 @@
 objs += usart.o
 
 ifeq ($(CONFIG_STM32_FAMILY), 1)
-objs-$(CONFIG_DRIVER_STM32_USART_PRINTK) += f1xx_usart_printk.o
+objs-$(CONFIG_DRIVER_STM32_USART_PRINTK) += usart_printk_f1.o
 endif
 
 ifeq ($(CONFIG_STM32_FAMILY), 4)
-objs-$(CONFIG_DRIVER_STM32_USART_PRINTK) += f4xx_usart_printk.o
+objs-$(CONFIG_DRIVER_STM32_USART_PRINTK) += usart_printk_f4.o
 endif
 
