device spi: added transaction request

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -256,25 +256,41 @@
 %config end
 
 %config CONFIG_DEVICE_SPI_REQUEST
-  parent CONFIG_DEVICE_SPI
-  depend CONFIG_MUTEK_BYTECODE
-  depend CONFIG_MUTEK_KROUTINE_TRIGGER
-  flags auto
-  desc Enable SPI device requests scheduler
+  parent CONFIG_DEVICE
+  when CONFIG_DEVICE_SPI_TRANSACTION
+  when CONFIG_DEVICE_SPI_BYTECODE
+  desc Enable SPI request scheduler
 %config end
 
-%config CONFIG_DEVICE_SPI_REQUEST_TIMER
-  parent CONFIG_DEVICE_SPI_REQUEST
+%config CONFIG_DEVICE_SPI_TRANSACTION
+  parent CONFIG_DEVICE_SPI
+  depend CONFIG_DEVICE_SPI_REQUEST
+  depend CONFIG_MUTEK_KROUTINE_SCHED
+  flags auto
+  desc Enable scheduling SPI transaction requests
+%config end
+
+%config CONFIG_DEVICE_SPI_BYTECODE
+  parent CONFIG_DEVICE_SPI
+  depend CONFIG_DEVICE_SPI_REQUEST
+  depend CONFIG_MUTEK_BYTECODE
+  depend CONFIG_MUTEK_KROUTINE_SCHED
+  flags auto
+  desc Enable scheduling SPI bytecode requests
+%config end
+
+%config CONFIG_DEVICE_SPI_BYTECODE_TIMER
+  parent CONFIG_DEVICE_SPI_BYTECODE
   depend CONFIG_DEVICE_TIMER
   flags auto
-  desc Enable SPI device requests scheduler time handling
+  desc Enable time handling in SPI bytecode
 %config end
 
-%config CONFIG_DEVICE_SPI_REQUEST_GPIO
-  parent CONFIG_DEVICE_SPI_REQUEST
+%config CONFIG_DEVICE_SPI_BYTECODE_GPIO
+  parent CONFIG_DEVICE_SPI_BYTECODE
   depend CONFIG_DEVICE_GPIO
   flags auto
-  desc Enable SPI device requests gpio based instructions and chip select
+  desc Enable GPIO access from SPI bytecode
 %config end
 
 %config CONFIG_DEVICE_CLOCK
