mcp23s17: update spi bytecode rq, moved header

--- a/drivers/gpio/gpio.config
+++ b/drivers/gpio/gpio.config
@@ -10,6 +10,7 @@
   desc Enable MCP23S17 SPI i/o Extender
   depend CONFIG_DEVICE_GPIO
   depend CONFIG_DEVICE_SPI
+  depend CONFIG_DEVICE_SPI_BYTECODE
 %config end
 
 %config CONFIG_DRIVER_MCP23S17_ICU
@@ -19,6 +20,7 @@
   depend CONFIG_DEVICE_ICU
   require CONFIG_DRIVER_MCP23S17_IRQ_COUNT<=16
   require CONFIG_DRIVER_MCP23S17_IRQ_COUNT>0
+  default defined
 %config end
 
 %config CONFIG_DRIVER_MCP23S17_IRQ_COUNT
