Fix bug in nrf5x documentation

--- a/arch/nrf5x/nrf5x.config
+++ b/arch/nrf5x/nrf5x.config
@@ -1,6 +1,6 @@
 %config CONFIG_ARCH_NRF5X
   desc Nordic nRF5X platform support
-  module arch Hexo
+  module arch Hardware abstraction layer
   provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=nrf5x
   single CONFIG_ARCH_NRF51 CONFIG_ARCH_NRF52
