emu: removed bad Makefile subdir

--- a/arch/emu/Makefile
+++ b/arch/emu/Makefile
@@ -5,7 +5,7 @@ syscalls.o
 
 objs-$(CONFIG_ARCH_EMU_DARWIN) += darwin_before.o darwin_after.o
 objs-$(CONFIG_HEXO_IRQ) += interrupts.o
-subdirs = include/arch/hexo drivers
+subdirs = drivers
 
 ifeq ($(LINKING),1)
 meta = ldscript
