tests interrupts: fixed config token

--- a/tests/pool/interrupts/config
+++ b/tests/pool/interrupts/config
@@ -41,5 +41,7 @@
 
 %section test_preempt
   CONFIG_HEXO_CONTEXT_PREEMPT!
-  CONFIG_MUTEK_CONTEXT_SCHED_PREEMPT!
+%else
+  CONFIG_HEXO_CONTEXT_PREEMPT! undefined
+
 
