efm32 dma: added missing config dep

--- a/arch/efm32/drivers/dma/dma.config
+++ b/arch/efm32/drivers/dma/dma.config
@@ -3,6 +3,7 @@
   desc Enable EFM32 dma driver
   parent CONFIG_ARCH_EFM32
   depend CONFIG_DEVICE_DMA
+  depend CONFIG_DEVICE_IRQ
   require CONFIG_DRIVER_EFM32_DMA_CHANNEL_COUNT
 %config end
 
