--- a/tests/pool/minimal/config
+++ b/tests/pool/minimal/config
@@ -9,12 +9,11 @@ CONFIG_LICENSE_APP_LGPL
 
 CONFIG_APP_START
 
-CONFIG_HEXO_IRQ undefined
-CONFIG_DEVICE_IRQ undefined
-CONFIG_DEVICE undefined
-CONFIG_CPU_ARM_DRIVER undefined
+CONFIG_HEXO_IRQ! undefined
+CONFIG_DEVICE_IRQ! undefined
+CONFIG_DEVICE! undefined
 
-CONFIG_MUTEK_MEMALLOC_SIMPLE
-CONFIG_LIBC_FORMATTER_SIMPLE
+CONFIG_MUTEK_MEMALLOC_SIMPLE!
+CONFIG_LIBC_FORMATTER_SIMPLE!
 
 CONFIG_COMPILE_COLLECT
