--- a/arch/stm32/drivers/Makefile
+++ b/arch/stm32/drivers/Makefile
@@ -5,10 +5,10 @@ subdirs-$(CONFIG_DRIVER_STM32_PWM) += pwm
 subdirs-$(CONFIG_DRIVER_STM32_TIMER) += timer
 subdirs-$(CONFIG_DRIVER_STM32_SPI) += spi
 
-ifeq ($(CONFIG_STM32_FAMILY),1)
+ifeq ($(CONFIG_STM32_FAMILY), 1)
 subdirs-$(CONFIG_DRIVER_STM32_GPIO_F1) += gpio_f1
 endif
 
-ifeq ($(CONFIG_STM32_FAMILY),4)
-subdirs-$(CONFIG_DRIVER_STM32_GPIO_F4) += gpio_f4
+ifeq ($(CONFIG_STM32_FAMILY), 4)
+subdirs-$(CONFIG_DRIVER_STM32_GPIO_F4) += gpio_x4
 endif
