mutek: added CONFIG_MUTEK_BYTECODE_VM64

--- a/tests/pool/bytecode/config
+++ b/tests/pool/bytecode/config
@@ -37,3 +37,9 @@
 %else
   CONFIG_MUTEK_BYTECODE_NATIVE! undefined
   CONFIG_MUTEK_BYTECODE_VM!
+
+%section t_vm64
+  CONFIG_MUTEK_BYTECODE_VM64!
+%else
+  CONFIG_MUTEK_BYTECODE_VM64! undefined
+
