--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -557,6 +557,12 @@
   when CONFIG_MUTEK_BYTECODE_NATIVE!
 %config end
 
+%config CONFIG_MUTEK_BYTECODE_VM64
+  desc Force use of 64 bits vm registers on 32 bits arch for test purpose.
+  parent CONFIG_MUTEK_BYTECODE_VM
+  exclude CONFIG_RELEASE
+%config end
+
 %config CONFIG_MUTEK_BYTECODE_NATIVE
   desc Enable translation of bytecode in machine code at compile time.
   parent CONFIG_MUTEK_BYTECODE
