arch/nrf5x: Fix RTC with new APIs

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -152,6 +152,7 @@
 %config CONFIG_DRIVER_NRF5X_RTC
   desc Enable nRF5x RTC driver
   parent CONFIG_ARCH_NRF5X
+  provide CONFIG_DEVICE_START_LOG2INC=1
   depend CONFIG_DEVICE_TIMER
   depend CONFIG_DEVICE_IRQ
 %config end
