--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -162,6 +162,7 @@
 %config CONFIG_DRIVER_NRF5X_TIMER
   desc Enable nRF5x Timer driver
   parent CONFIG_ARCH_NRF5X
+  provide CONFIG_DEVICE_START_LOG2INC=1
   depend CONFIG_DEVICE_TIMER
   depend CONFIG_DEVICE_IRQ
 %config end
