arch/nrf5x: Drop reentrance support in UART

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -192,8 +192,10 @@
 %config CONFIG_DRIVER_NRF5X_UART
   desc Enable nRF5x UART driver
   parent CONFIG_ARCH_NRF5X
+  provide CONFIG_DEVICE_START_LOG2INC=2
   depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_CHAR
+  depend CONFIG_DEVICE_SLEEP
   depend CONFIG_DEVICE_IRQ
 %config end
 
