libdevice: added support for async device init

--- a/cpu/arm32m/arm32m.config
+++ b/cpu/arm32m/arm32m.config
@@ -149,6 +149,15 @@
   depend CONFIG_DEVICE_TIMER
 %config end
 
+%config CONFIG_CPU_ARM32M_CLOCK
+  desc Use clock end-point on ARM driver processor
+  parent CONFIG_CPU_ARM32M
+  # break dep cycle, clock manager will require the ICU class of the CPU
+  depend CONFIG_DEVICE_INIT_PARTIAL
+  depend CONFIG_DEVICE_CLOCK
+  when CONFIG_DEVICE_CLOCK
+%config end
+
 %config CONFIG_CPU_ARM32M_MPU_NULL_PTR
   desc Use the Memory Protection Unit of ARM-m processor to catch NULL pointer access
   parent CONFIG_CPU_ARM32M
