--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -124,6 +124,23 @@
   function device_tree_init
 %init end
 
+%config CONFIG_DEVICE_INIT_ASYNC
+  parent CONFIG_DEVICE
+  desc Allow asynchronous operations during device driver initialization and cleanup.
+  desc The driver is able to report completion of initialization and cleanup using
+  desc deferred execution.
+  depend CONFIG_MUTEK_KROUTINE_SCHED
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_INIT_PARTIAL
+  parent CONFIG_DEVICE
+  desc Allow initialization of different classes provided by a driver in multiple passes.
+  desc Some classes of the driver can be ready for use even if partially initialized.
+  desc This helps breaking dependency cycles between devices.
+  flags auto
+%config end
+
 %config CONFIG_DEVICE_ADDRESS_SPACES
   parent CONFIG_DEVICE
   desc Support platforms with multiple address spaces.
@@ -171,7 +188,7 @@
   default defined
 %config end
 
-%config CONFIG_DEVICE_DRIVER_CLEANUP
+%config CONFIG_DEVICE_CLEANUP
   desc Include cleanup function in driver
   parent CONFIG_DEVICE
   default defined
