gaisler: cleanup and improvment of the gptimer driver

--- a/arch/gaisler/gaisler.config
+++ b/arch/gaisler/gaisler.config
@@ -31,6 +31,13 @@
   flags value
 %config end
 
+%config CONFIG_GAISLER_BASE_FREQ
+  desc Gaisler base system frequency
+  parent CONFIG_ARCH_GAISLER
+  default 50000000
+  flags value
+%config end
+
 %config CONFIG_GAISLER_PRINTK_DEBUG
   desc Gaisler UART is configured by debug support unit, do not update control register
   parent CONFIG_GAISLER_PRINTK
