added the INIT_DEVREADY startup phase

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -51,9 +51,10 @@
   suggest_when CONFIG_HEXO_IRQ CONFIG_HEXO_FPU
 %config end
 
-%init INIT_HEXO_MAIN_CONTEXT
+%init INIT_HEXO_CONTEXT
   parent CONFIG_HEXO
-  desc Initialization of processor contexts and first interrupts enable
+  desc Initialization of processor contexts and first interrupts enable.
+  desc Execution context save/restore and interrupts/exceptions are allowed once this is done.
   during INIT_SMP
   after INIT_CPUS
   function hexo_context_initsmp
