--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -33,8 +33,9 @@
   desc Try to find available drivers and initialize all registered devices
   during INIT_SMP
   after INIT_CPUS
-  after INIT_HEXO_MAIN_CONTEXT
-  after INIT_MUTEK_SCHEDULER_INIT
+  after INIT_HEXO_CONTEXT
+  after INIT_MUTEK_SCHEDULER_INITSMP
+  before INIT_MUTEK_SCHEDULER_START
   function libdevice_drivers_init1
 %init end
 
@@ -112,9 +113,9 @@
 
 %config CONFIG_DEVICE_TREE
   parent CONFIG_DEVICE
+  flags auto
   desc Enable devices to be enumerated dynamically and stored in a tree.
   desc When this is disabled, a static device table is used instead.
-  default defined
 %config end
 
 %init INIT_DEVICE_TREE
