--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -23,9 +23,8 @@
 %init INIT_PTHREAD_CREATE_MAIN
   parent CONFIG_PTHREAD_MAIN
   desc Create a POSIX thread for the user defined main function.
-  during INIT_SMP
+  during INIT_DEVREADY
   after INIT_LIBRARIES
-  before INIT_MUTEK_SCHEDULER_START
   function libpthread_create_main_initsmp
 %config end
 
