--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -59,8 +59,30 @@
 %init INIT_SMP
   parent CONFIG_MUTEK
   during INIT_MUTEKH_STARTUP
+  after INIT_BOOTSTRAP
   desc Root init token for all startup operations which may be performed on multiple processors
   flags calls
+%init end
+
+%init INIT_DEVREADY
+  parent CONFIG_MUTEK
+  desc Root init token for all startup operations which must be performed once no more device
+  desc initialization is ongoing. This may happen before or after scheduler startup depending
+  desc on the configuration. This still occurs at the end of startup when libdevice is disabled.
+  after INIT_SMP
+  during INIT_MUTEKH_STARTUP
+  flags calls
+%init end
+
+%init INIT_NODEV
+  parent CONFIG_MUTEK
+  during INIT_SMP
+  condition CONFIG_DEVICE!
+  desc This perform INIT_DEVREADY when libdevice is not used.
+  after INIT_HEXO_CONTEXT
+  after INIT_MUTEK_SCHEDULER_INITSMP
+  before INIT_MUTEK_SCHEDULER_START
+  function mutekh_startup_nodev
 %init end
 
 %init INIT_CPUS
@@ -72,10 +94,7 @@
 %init INIT_LIBRARIES
   parent CONFIG_MUTEK
   desc Initialization of mutekh libraries
-  during INIT_SMP
-  after INIT_CPUS
-  after INIT_MUTEK_SCHEDULER_INIT
-  after INIT_DEVICE_OTHER_DRIVERS
+  during INIT_DEVREADY
 %init end
 
 %config CONFIG_APP_START
@@ -90,9 +109,8 @@
 
 %init INIT_APP_START
   parent CONFIG_APP_START
-  during INIT_SMP
+  during INIT_DEVREADY
   after INIT_LIBRARIES
-  before INIT_MUTEK_SCHEDULER_START
   function mutek_app_initsmp
 %init end
 
@@ -138,8 +156,7 @@
 %init INIT_MUTEK_CONSOLE
   parent CONFIG_MUTEK_CONSOLE
   desc Initialize the console_dev device accessor.
-  during INIT_SMP
-  after INIT_DEVICE_OTHER_DRIVERS
+  during INIT_DEVREADY
   before INIT_LIBRARIES
   function mutek_console_initsmp mutek_console_cleanupsmp
 %init end
@@ -173,7 +190,7 @@
 
 %init INIT_MUTEK_SHELL_THREAD
   parent CONFIG_MUTEK_SHELL_THREAD
-  during INIT_SMP
+  during INIT_DEVREADY
   after INIT_MUTEK_CONSOLE
   function mutek_shell_thread_init
 %init end
@@ -284,7 +301,7 @@
 
 %init INIT_MUTEK_SCHEDULER_INIT
   parent CONFIG_MUTEK_SCHED
-  desc Initialization of scheduler
+  desc Initialization of the scheduler on the bootstrap processor.
   during INIT_BOOTSTRAP
   after INIT_MEMORY
   before INIT_START_CPUS
@@ -293,16 +310,17 @@
 
 %init INIT_MUTEK_SCHEDULER_INITSMP
   parent CONFIG_MUTEK_SCHED
-  desc Initialization of scheduler
+  desc Initialization of the scheduler on all processors.
+  desc Contexts and kroutine may be scheduled once this is done.
   during INIT_SMP
-  after INIT_HEXO_MAIN_CONTEXT
+  after INIT_HEXO_CONTEXT
   function mutek_scheduler_initsmp
 %init end
 
 %init INIT_MUTEK_SCHEDULER_START
   parent CONFIG_MUTEK_SCHED
-  desc Initialization of scheduler and first interrupts enable
-  after INIT_LIBRARIES
+  desc Enter the scheduler loop. Any scheduled context or kroutine will start running.
+  after INIT_MUTEK_SCHEDULER_INITSMP
   during INIT_SMP
   function mutek_scheduler_start
 %init end
