--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -276,5 +276,6 @@
 %config CONFIG_DRIVER_NRF5X_ADC
   desc Enable nRF5x ADC driver
   parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_VALIO
   depend CONFIG_DEVICE_VALIO_ADC
 %config end
