printk: updated config token requirements for printk implementations

--- a/arch/gaisler/gaisler.config
+++ b/arch/gaisler/gaisler.config
@@ -19,9 +19,10 @@
 
 %config CONFIG_GAISLER_PRINTK
   desc enable SoCLib early console TTY before device initialization
+  depend CONFIG_MUTEK_PRINTK
   provide CONFIG_MUTEK_PRINTK_HANDLER
   parent CONFIG_ARCH_GAISLER
-  require CONFIG_MUTEK_PRINTK_ADDR
+  require CONFIG_MUTEK_PRINTK_ADDR!=0
 %config end
 
 %config CONFIG_GAISLER_PRINTK_SCALER
