--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -24,6 +24,7 @@
   desc Enable early text console before real drivers init.
   desc Text output will be written to vga text buffer at 0xb8000.
   provide CONFIG_MUTEK_PRINTK_HANDLER
+  depend CONFIG_MUTEK_PRINTK
   parent CONFIG_ARCH_IBMPC
 %config end
 
@@ -31,6 +32,7 @@
   desc Enable early text console before real drivers init.
   desc Text output will be sent to 16550 UART.
   provide CONFIG_MUTEK_PRINTK_HANDLER
+  depend CONFIG_MUTEK_PRINTK
   parent CONFIG_ARCH_IBMPC
 %config end
 
@@ -45,6 +47,7 @@
   desc Enable early text console before real drivers init.
   desc Text output will be written to 0xe9 port, supported by Qemu and Bochs emulators.
   provide CONFIG_MUTEK_PRINTK_HANDLER
+  depend CONFIG_MUTEK_PRINTK
   parent CONFIG_ARCH_IBMPC
 %config end
 
