--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -212,7 +212,9 @@
 %config CONFIG_DRIVER_NRF5X_PRINTK
   desc Pin to use for UART console output
   parent CONFIG_ARCH_NRF5X
+  depend CONFIG_MUTEK_PRINTK
   provide CONFIG_MUTEK_PRINTK_HANDLER
+  require CONFIG_MUTEK_PRINTK_ADDR!=0
 %config end
 
 %init INIT_DRIVER_NRF5X_PRINTK
