--- a/arch/pic32/drivers/uart/uart.config
+++ b/arch/pic32/drivers/uart/uart.config
@@ -9,6 +9,7 @@
   parent CONFIG_DRIVER_PIC32_UART
   depend CONFIG_MUTEK_PRINTK
   provide CONFIG_MUTEK_PRINTK_HANDLER
+  require CONFIG_MUTEK_PRINTK_ADDR!=0
   require CONFIG_DRIVER_PIC32_UART_PRINTK_PIN
   require CONFIG_DRIVER_PIC32_UART_PRINTK_BAUDRATE
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x1F802000
