--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -28,7 +28,7 @@
   desc enable SoCLib early console TTY before device initialization
   provide CONFIG_MUTEK_PRINTK_HANDLER
   parent CONFIG_ARCH_SOCLIB
-  require CONFIG_MUTEK_PRINTK_ADDR
+  require CONFIG_MUTEK_PRINTK_ADDR!=0
   depend CONFIG_MUTEK_PRINTK
 %config end
 
