--- a/arch/zynq/zynq.config
+++ b/arch/zynq/zynq.config
@@ -10,6 +10,8 @@
   desc Zynq early console output uses an UART device
   parent CONFIG_ARCH_ZYNQ
   provide CONFIG_MUTEK_PRINTK_HANDLER
+  depend CONFIG_MUTEK_PRINTK
+  require CONFIG_MUTEK_PRINTK_ADDR!=0
 %config end
 
 %init INIT_ZYNQ_PRINTK_UART
