--- a/arch/bcm283x/bcm283x.config
+++ b/arch/bcm283x/bcm283x.config
@@ -24,6 +24,8 @@
   desc Raspberry early console output uses an UART device
   parent CONFIG_ARCH_BCM283X
   provide CONFIG_MUTEK_PRINTK_HANDLER
+  depend CONFIG_MUTEK_PRINTK
+  require CONFIG_MUTEK_PRINTK_ADDR!=0
 %config end
 
 %init INIT_BCM283X_PRINTK_UART
