--- a/arch/efm32/drivers/leuart/leuart.config
+++ b/arch/efm32/drivers/leuart/leuart.config
@@ -28,6 +28,7 @@
   provide CONFIG_MUTEK_PRINTK_HANDLER
   require CONFIG_DRIVER_EFM32_LEUART_PRINTK_PIN
   require CONFIG_DRIVER_EFM32_LEUART_PRINTK_LOC
+  require CONFIG_MUTEK_PRINTK_ADDR!=0
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40084000
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40084400
 %config end
