--- a/arch/efm32/drivers/usart/usart.config
+++ b/arch/efm32/drivers/usart/usart.config
@@ -46,6 +46,7 @@
   require CONFIG_DRIVER_EFM32_USART_PRINTK_PIN
   require CONFIG_DRIVER_EFM32_USART_PRINTK_LOC
   require CONFIG_DRIVER_EFM32_USART_RATE
+  require CONFIG_MUTEK_PRINTK_ADDR!=0
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000e000
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000e400
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c000
