--- a/arch/stm32/drivers/usart/usart.config
+++ b/arch/stm32/drivers/usart/usart.config
@@ -17,7 +17,7 @@
   require CONFIG_DRIVER_STM32_USART_PRINTK_CLK_FREQ
   require CONFIG_DRIVER_STM32_USART_PRINTK_PIN
   require CONFIG_DRIVER_STM32_USART_PRINTK_AF
-  require CONFIG_MUTEK_PRINTK_ADDR
+  require CONFIG_MUTEK_PRINTK_ADDR!=0
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40013800 CONFIG_STM32_FAMILY=1
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40004400 CONFIG_STM32_FAMILY=1
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40004800 CONFIG_STM32_FAMILY=1
