printk: some renaming

--- a/arch/atmel/atmel.config
+++ b/arch/atmel/atmel.config
@@ -23,7 +23,7 @@
 %init INIT_ATMEL_PRINTK_AVR32_SIM
   parent CONFIG_ATMEL_PRINTK_AVR32_SIM
   during INIT_MUTEK_PRINTK
-  function atmel_early_console_avr32sim_init
+  function atmel_printk_avr32sim_init
 %init end
 
 
@@ -38,6 +38,6 @@
 %init INIT_ATMEL_PRINTK_USART
   parent CONFIG_ATMEL_PRINTK_USART
   during INIT_MUTEK_PRINTK
-  function atmel_early_console_usart_init
+  function atmel_printk_usart_init
 %init end
 
