--- a/arch/bcm283x/bcm283x.config
+++ b/arch/bcm283x/bcm283x.config
@@ -31,6 +31,6 @@
 %init INIT_BCM283X_PRINTK_UART
   parent CONFIG_BCM283X_PRINTK_UART
   during INIT_MUTEK_PRINTK
-  function bcm283x_early_console_init
+  function bcm283x_printk_init
 %init end
 
