--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -77,7 +77,7 @@
 %init INIT_EMU_PRINTK
   parent CONFIG_EMU_PRINTK
   during INIT_MUTEK_PRINTK
-  function emu_early_console_init
+  function emu_printk_init
 %init end
 
 
