--- a/arch/gaisler/Makefile
+++ b/arch/gaisler/Makefile
@@ -1,5 +1,5 @@
 objs = arch_init.o device_ids.o power.o
-objs-$(CONFIG_GAISLER_PRINTK) += early_console.o
+objs-$(CONFIG_GAISLER_PRINTK) += printk.o
 
 ifeq ($(LINKING),1)
 meta = ldscript
