--- a/arch/gaisler/gaisler.config
+++ b/arch/gaisler/gaisler.config
@@ -47,7 +47,7 @@
 %init INIT_GAISLER_PRINTK
   parent CONFIG_GAISLER_PRINTK
   during INIT_MUTEK_PRINTK
-  function gaisler_early_console_init
+  function gaisler_printk_init
 %init end
 
 
