--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -55,7 +55,7 @@
   parent CONFIG_ARCH_IBMPC
   condition CONFIG_MUTEK_PRINTK
   during INIT_MUTEK_PRINTK
-  function ibmpc_early_console_init
+  function ibmpc_printk_init
 %init end
 
 %config CONFIG_ARCH_IBMPC_MEMORY
