--- a/arch/soclib/Makefile
+++ b/arch/soclib/Makefile
@@ -3,7 +3,7 @@ objs = 											\
 arch_init.o										\
 power.o
 
-objs-$(CONFIG_SOCLIB_PRINTK) += early_console.o
+objs-$(CONFIG_SOCLIB_PRINTK) += printk.o
 objs-$(CONFIG_HEXO_MMU) += mmu.o
 
 ifeq ($(LINKING),1)
