--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -35,7 +35,7 @@
 %init INIT_SOCLIB_PRINTK
   parent CONFIG_SOCLIB_PRINTK
   during INIT_MUTEK_PRINTK
-  function soclib_early_console_init
+  function soclib_printk_init
 %init end
 
 
