--- a/arch/zynq/zynq.config
+++ b/arch/zynq/zynq.config
@@ -17,6 +17,6 @@
 %init INIT_ZYNQ_PRINTK_UART
   parent CONFIG_ZYNQ_PRINTK_UART
   during INIT_MUTEK_PRINTK
-  function zynq_early_console_init
+  function zynq_printk_init
 %init end
 
