--- a/arch/atmel/Makefile
+++ b/arch/atmel/Makefile
@@ -1,7 +1,7 @@
 objs =											\
 arch_init.o										\
 
-objs-$(CONFIG_MUTEK_PRINTK_HANDLER) += early_console.o
+objs-$(CONFIG_MUTEK_PRINTK_HANDLER) += printk.o
 
 meta = ldscript
 
