--- a/arch/bcm283x/Makefile
+++ b/arch/bcm283x/Makefile
@@ -1,5 +1,5 @@
 objs = arch_init.o power.o
-objs-$(CONFIG_MUTEK_PRINTK_HANDLER) += early_console.o
+objs-$(CONFIG_MUTEK_PRINTK_HANDLER) += printk.o
 
 meta = ldscript
 
