--- a/arch/ibmpc/Makefile
+++ b/arch/ibmpc/Makefile
@@ -1,6 +1,6 @@
 objs = arch_init.o power.o
 objs-$(CONFIG_ARCH_IBMPC_DMA) += dma-8237.o
-objs-$(CONFIG_MUTEK_PRINTK_HANDLER) += early_console.o
+objs-$(CONFIG_MUTEK_PRINTK_HANDLER) += printk.o
 
 meta = ldscript
 
