stm32: add support for usart in l4 family (f1, f4 refactoring)

--- a/arch/stm32/drivers/usart/usart.config
+++ b/arch/stm32/drivers/usart/usart.config
@@ -24,6 +24,11 @@
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40011000 CONFIG_STM32_FAMILY=4
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40004400 CONFIG_STM32_FAMILY=4
   when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40011400 CONFIG_STM32_FAMILY=4
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40013800 CONFIG_STM32_FAMILY=L4
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40004400 CONFIG_STM32_FAMILY=L4
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40004800 CONFIG_STM32_FAMILY=L4
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40004c00 CONFIG_STM32_FAMILY=L4
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40005000 CONFIG_STM32_FAMILY=L4
   flags auto
 %config end
 
