--- a/libble/ble.config
+++ b/libble/ble.config
@@ -62,6 +62,11 @@
   parent CONFIG_BLE_GATTDB
 %config end
 
+%config CONFIG_BLE_GATTDB_STREAM
+  desc Support GATTDB attribute value streaming
+  parent CONFIG_BLE_GATTDB
+%config end
+
 %config CONFIG_BLE_CRYPTO
   desc Enable BLE crypto ops
   parent CONFIG_BLE
