drivers/char/rtt: Allow to use an IDLE kroutine as polling source

--- a/drivers/char/rtt/rtt.config
+++ b/drivers/char/rtt/rtt.config
@@ -3,8 +3,21 @@
   parent CONFIG_DRIVER
   depend CONFIG_DRIVER_RTT
   depend CONFIG_DEVICE_CHAR
+%config end
+
+%config CONFIG_DRIVER_CHAR_RTT_IDLE
+  desc Use a idle kroutine for polling on RTT rx buffer
+  parent CONFIG_DRIVER_CHAR_RTT
+  depend CONFIG_MUTEK_KROUTINE_SCHED
+  depend CONFIG_MUTEK_KROUTINE_IDLE
+%config end
+
+%config CONFIG_DRIVER_CHAR_RTT_TIMER
+  desc Use a timer device to define polling on RTT rx buffer
+  parent CONFIG_DRIVER_CHAR_RTT
   depend CONFIG_DEVICE_TIMER
   depend CONFIG_MUTEK_KROUTINE_SCHED
+  when CONFIG_DRIVER_CHAR_RTT_IDLE!
 %config end
 
 %config CONFIG_DRIVER_CHAR_RTT_TX_BUFFER_SIZE
