--- a/hexo/Makefile
+++ b/hexo/Makefile
@@ -1,7 +1,7 @@
 
 DIR_CFLAGS = -D_HEXO_INTTYPES_DEPRECATED
 
-objs = cpu.o context.o interrupt.o init.o
+objs = cpu.o context.o interrupt.o init.o enum.o
 
 objs-$(CONFIG_HEXO_IPI) += ipi.o
 
