stm32: use device start bits for usart state

--- a/arch/stm32/drivers/usart/usart.config
+++ b/arch/stm32/drivers/usart/usart.config
@@ -6,6 +6,7 @@
   depend CONFIG_DEVICE_IOMUX
   depend CONFIG_DEVICE_UART
   suggest CONFIG_DEVICE_IRQ
+  provide CONFIG_DEVICE_START_LOG2INC=2
 %config end
 
 %config CONFIG_DRIVER_STM32_USART_PRINTK
