drivers/printk/rtt: Rework RTT printk dependencies

--- a/drivers/printk/printk.config
+++ b/drivers/printk/printk.config
@@ -1,6 +1,7 @@
 %config CONFIG_DRIVER_RTT_PRINTK
   desc Use RTT printk
-  parent CONFIG_DRIVER_RTT
+  parent CONFIG_DRIVER
+  depend CONFIG_DRIVER_RTT
   depend CONFIG_MUTEK_PRINTK
   provide CONFIG_MUTEK_PRINTK_HANDLER
 %config end
