arch/psoc4: Add power API

--- a/arch/psoc4/psoc4.config
+++ b/arch/psoc4/psoc4.config
@@ -11,3 +11,9 @@
   parent CONFIG_ARCH_PSOC4
   flags value
 %config end
+
+%init INIT_PSOC4_POWER
+  parent CONFIG_ARCH_PSOC4
+  during INIT_BOOTSTRAP
+  function psoc4_power_setup
+%init end
