arch/psoc4: Add clock driver

--- a/arch/psoc4/drivers/drivers.config
+++ b/arch/psoc4/drivers/drivers.config
@@ -32,3 +32,18 @@
   during INIT_BOOTSTRAP
   function psoc4_clock_setup
 %init end
+
+%config CONFIG_DRIVER_PSOC4_CLOCK
+  desc PSoC4/ProcBLE Clock device driver
+  parent CONFIG_ARCH_PSOC4
+  depend CONFIG_DEVICE_CLOCK
+  depend CONFIG_DEVICE_CLOCK_GATING
+  provide CONFIG_DEVICE_CLOCK_FRAC_WIDTH=22
+  provide CONFIG_DEVICE_CLOCK_OSCD_WIDTH=22
+  depend CONFIG_DEVICE_CLOCK_VARFREQ
+%config end
+
+%config CONFIG_DRIVER_PSOC4_CLOCK_EXTCLK
+  desc Enable support for EXTCLK HFCLK source
+  parent CONFIG_DRIVER_PSOC4_CLOCK
+%config end
