arch/psoc4: Add GPIO driver

--- a/arch/psoc4/drivers/drivers.config
+++ b/arch/psoc4/drivers/drivers.config
@@ -25,6 +25,31 @@
   default 115200
 %config end
 
+# GPIO
+
+%config CONFIG_DRIVER_PSOC4_GPIO
+  desc Enable PSoC4 GPIO driver
+  parent CONFIG_ARCH_PSOC4
+  depend CONFIG_DEVICE_GPIO
+%config end
+
+%config CONFIG_DRIVER_PSOC4_GPIO_ICU_CHANNEL_COUNT
+  desc Enable PSoC4 GPIO IRQ routing
+  parent CONFIG_DRIVER_PSOC4_GPIO
+  flags value
+  default 0
+  range [0,4]
+%config end
+
+%config CONFIG_DRIVER_PSOC4_GPIO_ICU
+  desc Enable PSoC4 GPIO IRQ routing
+  parent CONFIG_DRIVER_PSOC4_GPIO
+  depend CONFIG_DEVICE_ICU
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_IRQ
+  when CONFIG_DRIVER_PSOC4_GPIO_ICU_CHANNEL_COUNT>0
+%config end
+
 # Clock
 
 %init INIT_DRIVER_PSOC4_CLOCK
