arch/psoc4: Add UART driver

--- a/arch/psoc4/drivers/Makefile
+++ b/arch/psoc4/drivers/Makefile
@@ -1,3 +1,4 @@
 objs += clock.o
 objs-$(CONFIG_DRIVER_PSOC4_PRINTK) += printk.o
+objs-$(CONFIG_DRIVER_PSOC4_UART) += uart.o
 objs-$(CONFIG_DRIVER_PSOC4_GPIO) += gpio.o
