--- a/arch/psoc4/drivers/drivers.config
+++ b/arch/psoc4/drivers/drivers.config
@@ -50,6 +50,20 @@
   when CONFIG_DRIVER_PSOC4_GPIO_ICU_CHANNEL_COUNT>0
 %config end
 
+# UART
+
+%config CONFIG_DRIVER_PSOC4_UART
+  desc PSoC4 SCB UART char device
+  parent CONFIG_ARCH_PSOC4
+  provide CONFIG_DEVICE_START_LOG2INC=1
+  depend CONFIG_DEVICE_CHAR
+  depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_SLEEP
+  depend CONFIG_DEVICE_CLOCK
+  depend CONFIG_DEVICE_CLOCK_VARFREQ
+%config end
+
 # Clock
 
 %init INIT_DRIVER_PSOC4_CLOCK
