arch/psoc4: Add RTC driver

--- a/arch/psoc4/drivers/Makefile
+++ b/arch/psoc4/drivers/Makefile
@@ -2,3 +2,4 @@ objs += clock.o
 objs-$(CONFIG_DRIVER_PSOC4_PRINTK) += printk.o
 objs-$(CONFIG_DRIVER_PSOC4_UART) += uart.o
 objs-$(CONFIG_DRIVER_PSOC4_GPIO) += gpio.o
+objs-$(CONFIG_DRIVER_PSOC4_RTC) += rtc.o
