--- a/arch/psoc4/drivers/drivers.config
+++ b/arch/psoc4/drivers/drivers.config
@@ -86,3 +86,16 @@
   desc Enable support for EXTCLK HFCLK source
   parent CONFIG_DRIVER_PSOC4_CLOCK
 %config end
+
+# Wdt RTC
+
+%config CONFIG_DRIVER_PSOC4_RTC
+  desc PSoC4 WDT-based RTC
+  parent CONFIG_ARCH_PSOC4
+  provide CONFIG_DEVICE_START_LOG2INC=1
+  depend CONFIG_DEVICE_TIMER
+  depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DEVICE_SLEEP
+  depend CONFIG_DEVICE_CLOCK
+  depend CONFIG_DEVICE_CLOCK_VARFREQ
+%config end
