arch/psoc4: Improve support for chip variants

--- a/arch/psoc4/psoc4.config
+++ b/arch/psoc4/psoc4.config
@@ -4,6 +4,22 @@
   depend CONFIG_CPU_ARM32M_CORTEXM0
   provide CONFIG_ARCH_META
   provide CONFIG_ARCH_NAME=psoc4
+  single CONFIG_ARCH_PSOC4_PROCBLE CONFIG_ARCH_PSOC4_PSOC CONFIG_ARCH_PSOC4_BLE
+%config end
+
+%config CONFIG_ARCH_PSOC4_PROCBLE
+  desc PRoC-BLE variant support
+  parent CONFIG_ARCH_PSOC4
+%config end
+
+%config CONFIG_ARCH_PSOC4_PSOC
+  desc Basic PSoC4 variant support
+  parent CONFIG_ARCH_PSOC4
+%config end
+
+%config CONFIG_ARCH_PSOC4_BLE
+  desc PSoC4-BLE variant support
+  parent CONFIG_ARCH_PSOC4
 %config end
 
 %config CONFIG_PSOC4_RAMSIZE
