BLE hacks in the pipe

--- a/arch/psoc4/drivers/drivers.config
+++ b/arch/psoc4/drivers/drivers.config
@@ -99,3 +99,17 @@
   depend CONFIG_DEVICE_CLOCK
   depend CONFIG_DEVICE_CLOCK_VARFREQ
 %config end
+
+# BLE
+
+%config CONFIG_DRIVER_PSOC4_BLE
+  desc PSoC4 BLE Radio driver
+  parent CONFIG_ARCH_PSOC4
+  provide CONFIG_DEVICE_START_LOG2INC=1
+  depend CONFIG_DEVICE_TIMER
+  depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DEVICE_SLEEP
+  depend CONFIG_DEVICE_CLOCK
+  depend CONFIG_DEVICE_CLOCK_VARFREQ
+  depend CONFIG_DEVICE_CLOCK_GATING
+%config end
