--- a/arch/psoc4/drivers/Makefile
+++ b/arch/psoc4/drivers/Makefile
@@ -3,3 +3,4 @@ objs-$(CONFIG_DRIVER_PSOC4_PRINTK) += printk.o
 objs-$(CONFIG_DRIVER_PSOC4_UART) += uart.o
 objs-$(CONFIG_DRIVER_PSOC4_GPIO) += gpio.o
 objs-$(CONFIG_DRIVER_PSOC4_RTC) += rtc.o
+objs-$(CONFIG_DRIVER_PSOC4_BLE) += ble.o
