drivers: add aes-cmac auth to soft_aes

--- a/drivers/crypto/soft_aes/aes.config
+++ b/drivers/crypto/soft_aes/aes.config
@@ -30,6 +30,12 @@
   default defined
 %config end
 
+%config CONFIG_DRIVER_CRYPTO_SOFT_AES_CMAC
+  desc Enable AES CMAC authentication mode
+  parent CONFIG_DRIVER_CRYPTO_SOFT_AES
+  default defined
+%config end
+
 %config CONFIG_DRIVER_CRYPTO_SOFT_AES_CTR
   desc Enable AES CTR mode
   parent CONFIG_DRIVER_CRYPTO_SOFT_AES
