--- a/drivers/crypto/soft_aes/Makefile
+++ b/drivers/crypto/soft_aes/Makefile
@@ -4,4 +4,5 @@ objs-$(CONFIG_DRIVER_CRYPTO_SOFT_AES_ECB) += aes_ecb.o
 objs-$(CONFIG_DRIVER_CRYPTO_SOFT_AES_CBC) += aes_cbc.o
 objs-$(CONFIG_DRIVER_CRYPTO_SOFT_AES_CTR) += aes_ctr.o
 objs-$(CONFIG_DRIVER_CRYPTO_SOFT_AES_OCB3) += aes_ocb.o
+objs-$(CONFIG_DRIVER_CRYPTO_SOFT_AES_CMAC) += aes_cmac.o
 
