drivers/button_set: Add support for sleeping driver

--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -68,6 +68,8 @@
   desc Enable GPIO-based set of button button keyboard Valio driver
   depend CONFIG_DEVICE_VALIO_KEYBOARD
   depend CONFIG_DEVICE_GPIO
+  provide CONFIG_DEVICE_START_LOG2INC=1
+  depend CONFIG_DEVICE_SLEEP
 %config end
 
 %config CONFIG_DRIVER_MPU6505
