all: s:end-point:endpoint:g
"Endpoint" is a word.

--- a/arch/gaisler/drivers/irqmp/irqmp.config
+++ b/arch/gaisler/drivers/irqmp/irqmp.config
@@ -20,7 +20,7 @@
 %config end
 
 %config CONFIG_DRIVER_GAISLER_IRQMP_BYPASS
-  desc Enforce use of interrupt bypass end-points which improves irq latency on gaisler systems
+  desc Enforce use of interrupt bypass endpoints which improves irq latency on gaisler systems
   parent CONFIG_DRIVER_GAISLER_IRQMP_ICU
   depend CONFIG_DEVICE_IRQ_BYPASS
   default defined
