--- a/cpu/arm32m/arm32m.config
+++ b/cpu/arm32m/arm32m.config
@@ -150,7 +150,7 @@
 %config end
 
 %config CONFIG_CPU_ARM32M_CLOCK
-  desc Use clock end-point on ARM driver processor
+  desc Use clock endpoint on ARM driver processor
   parent CONFIG_CPU_ARM32M
   # break dep cycle, clock manager will require the ICU class of the CPU
   depend CONFIG_DEVICE_INIT_PARTIAL
