--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -50,19 +50,19 @@
 
 %config CONFIG_DEVICE_IRQ_BYPASS
   parent CONFIG_DEVICE_IRQ
-  desc Enable use of irq bypass end-point. This will improve interrupt latency on some systems.
+  desc Enable use of irq bypass endpoint. This will improve interrupt latency on some systems.
   flags auto
 %config end
 
 %config CONFIG_DEVICE_IRQ_SHARING
   parent CONFIG_DEVICE_IRQ
-  desc Enable linking multiple irq src end-points to a single sink end-point.
+  desc Enable linking multiple irq src endpoints to a single sink endpoint.
   flags auto
 %config end
 
 %config CONFIG_DEVICE_IRQ_MULTI_SINK
   parent CONFIG_DEVICE_IRQ
-  desc Enable linking a single src end-point to multiple sink end-points.
+  desc Enable linking a single src endpoint to multiple sink endpoints.
   flags auto
 %config end
 
@@ -324,7 +324,7 @@
 
 %config CONFIG_DEVICE_CLOCK_SHARING
   parent CONFIG_DEVICE_CLOCK
-  desc Allow linking multiple clock sink to a single clock source end-point
+  desc Allow linking multiple clock sink to a single clock source endpoint
 %config end
 
 %config CONFIG_DEVICE_CLOCK_VARFREQ
