bytecode: allows dump instruction in native mode

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -593,8 +593,8 @@
 %config end
 
 %config CONFIG_MUTEK_BYTECODE_DEBUG
-  desc Enable verbose bytecode error reporting.
-  parent CONFIG_MUTEK_BYTECODE_VM
+  desc Enable the dump instruction, enable verbose failed checks.
+  parent CONFIG_MUTEK_BYTECODE
 %config end
 
 %config CONFIG_MUTEK_BYTECODE_TRACE
