libdevice: Rework clock throttling declaration and support
Actually implement throttling related APIs

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -338,18 +338,18 @@
   desc Enable device drivers to request different running frequencies
 %config end
 
-%config CONFIG_DEVICE_CLOCK_MODES
+%config CONFIG_DEVICE_CLOCK_MODE_COUNT
   parent CONFIG_DEVICE_CLOCK_THROTTLE
-  desc number of device driver clock throttling modes
+  desc Max number of device driver clock throttling modes
   flags value maxval
   default 4
 %config end
 
-%config CONFIG_DEVICE_CLOCK_MASKB
-  parent CONFIG_DEVICE_CLOCK_THROTTLE
-  desc width of clock resource mode mask
+%config CONFIG_DEVICE_CLOCK_SHARING_MAX_LOG2
+  parent CONFIG_DEVICE_CLOCK_SHARING
+  desc Log2 of number of sink devices that may share a single clock source endpoint
   flags value maxval
-  default 5
+  default 4
 %config end
 
 %config CONFIG_DEVICE_CLOCK_MAX_ID
@@ -359,11 +359,18 @@
   default 6
 %config end
 
-%config CONFIG_DEVICE_CLOCK_MAX_CONFIG
+%config CONFIG_DEVICE_CMU_CONFIGID_COUNT
   parent CONFIG_DEVICE_CLOCK
   desc Specify the maximum number of clock configurations (= bit width of the mask)
   flags value maxval
   default 6
+%config end
+
+%config CONFIG_DEVICE_CMU_CONFIGID_COUNT_LOG2
+  parent CONFIG_DEVICE_CLOCK_THROTTLE
+  desc Width of CMU device config ID (= log2(CONFIG_DEVICE_CMU_CONFIGID_COUNT))
+  flags value maxval
+  default 5
 %config end
 
 %config CONFIG_DEVICE_CLOCK_FRAC_WIDTH
