arch/nrf5x: Rewrite clock driver to use throttling
Before, clock driver would export two HFCLKs and two LFCLKs,
with and without precision.  This was a hack not in the spirit
of the clock API.  Use throttling API instead, so that each
sink may dynamically expose its requirements about clock device
configuration.

--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -1,4 +1,9 @@
+ifeq ($(CONFIG_DRIVER_NRF5X_CLOCK), defined)
 objs += clock.o
+else
+objs += clock_nodrv.o
+endif
+
 objs-$(CONFIG_DRIVER_NRF5X_GPIO) += gpio.o
 objs-$(CONFIG_DRIVER_NRF5X_GPIO_PWM) += gpio_pwm.o
 objs-$(CONFIG_DRIVER_NRF5X_UART) += uart.o
