--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -25,23 +25,22 @@
   depend CONFIG_MUTEK_KROUTINE_SCHED
 %config end
 
-%init INIT_NRF5X_CLOCK_INIT
+%config CONFIG_DRIVER_NRF5X_NOCLOCK
+  desc No nRF5x clock driver
   parent CONFIG_ARCH_NRF5X
+  when CONFIG_DRIVER_NRF5X_CLOCK!
+%config end
+
+%init INIT_NRF5X_CLOCK_INIT
+  parent CONFIG_DRIVER_NRF5X_NOCLOCK
   during INIT_BOOTSTRAP
   before INIT_MEMORY
   function arch_nrf5x_clock_init
 %init end
 
-%config CONFIG_DRIVER_NRF5X_CLOCK_HFCLK_FREQ
-  desc nRF5x High frequency clock frequency (MHz); 0 = not present
-  parent CONFIG_ARCH_NRF5X
-  flags value
-  default 0
-%config end
-
-%config CONFIG_DRIVER_NRF5X_CLOCK_LFCLK_XOSC
-  desc nRF5x Low frequency clock is 32.768KHz external christal
-  parent CONFIG_ARCH_NRF5X
+%config CONFIG_DRIVER_NRF5X_CLOCK_LFRC_CAL
+  desc nRF5x Support for LFRC calibration
+  parent CONFIG_DRIVER_NRF5X_CLOCK
 %config end
 
 # GPIO
